--- a/includes/templates/template_default/css/checkout_one_confirmation.css
+++ b/includes/templates/template_default/css/checkout_one_confirmation.css
@@ -1,2 +1,2 @@
 #checkoutOneConfirmation { position: absolute; text-align: center; width: 100%; height: 100%; }
-#checkoutOneConfirmationLoading { position: relative; top: 50%; left: 50%; }
+#checkoutOneConfirmationLoading { position: relative; top: 50%; }
