--- a/includes/templates/template_default/css/checkout_one_confirmation.css
+++ b/includes/templates/template_default/css/checkout_one_confirmation.css
@@ -1,2 +1,2 @@
-#checkoutOneConfirmation { position: absolute; text-align: center; width: 100%; height: 100%; }
+#checkoutOneConfirmation { position: absolute; text-align: center; width: 100%; height: 100%; top: 0; left: 0; }
 #checkoutOneConfirmationLoading { position: relative; top: 50%; }
