#90: Standardize the checkout flow
Update to (hopefully) pull in more payment methods.

--- a/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
+++ b/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
@@ -11,3 +11,4 @@ fieldset > #cartContentsDisplay div { margin-right: 0; }
 @media (max-width: 979px) {
   .floatingBox { width: 95%; float: none; margin: 0 auto; }
 }
+.opc-cc-submit, #confirm-order { cursor: pointer; }
