#96: All payment methods can be "one-page"
Update the processing, primarily in the plugin's jQuery, to enable
payment methods that collect card-data onsite to operate in one-page
mode ... unless they've been configured as "confirmation required".

--- a/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
+++ b/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
@@ -12,3 +12,5 @@ fieldset > #cartContentsDisplay div { margin-right: 0; }
   .floatingBox { width: 95%; float: none; margin: 0 auto; }
 }
 .opc-cc-submit, #opc-order-confirm, #opc-order-review { cursor: pointer; }
+
+#checkoutOneLoading { position: relative; height: 95vh; top: 50%; left: 50%; }
