#95: Disallow OPC if m'ple jQuery versions detected
Since OPC now HEAVILY relies on the jQuery infrastructure, check to see
that there aren't multiple versions in the current store; if so,
disallow the OPC with the message/link to the traditional multi-page
checkout.

--- a/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
+++ b/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
@@ -14,3 +14,4 @@ fieldset > #cartContentsDisplay div { margin-right: 0; }
 .opc-cc-submit, #opc-order-confirm, #opc-order-review { cursor: pointer; }
 
 #checkoutOneLoading { position: relative; height: 95vh; top: 50%; left: 50%; }
+#checkoutPaymentNoJs { text-align: center; border: 1px solid red; width: 95%; margin: 0 auto; }
