--- a/includes/templates/template_default/css/checkout_one.css
+++ b/includes/templates/template_default/css/checkout_one.css
@@ -14,3 +14,4 @@ fieldset > #cartContentsDisplay div { margin-right: 0; }
 .opc-cc-submit, #opc-order-confirm, #opc-order-review { cursor: pointer; }
 
 #checkoutOneLoading { position: relative; height: 95vh; top: 50%; left: 50%; }
+#checkoutPaymentNoJs { text-align: center; border: 1px solid red; width: 95%; margin: 0 auto; }
