#118: Bootstrap template interoperability
Update the session-hash function to remove CR/LF characters from the
order's total value.
Update the jQuery handling for the order's total to check the type of
HTML element, using the first child's value for `<div>` elements or the
second for all others.
Update page-specific stylesheets, adding the .clearBoth style since some
(like bootstrap) templates don't include that style.

--- a/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
+++ b/includes/templates/YOUR_TEMPLATE/css/checkout_one.css
@@ -10,6 +10,7 @@ th#ccProductsHeading { text-align: left; }
 th#ccTotalHeading { text-align: right; }
 .floatingBox  { width: 49%; }
 .clearRight { clear: right; }
+.clearBoth { clear: both; }
 label.inputLabel { width: 110px; }
 #cartContentsDisplay  th, #cartContentsDisplay td { padding: 0.5em 1em; }
 #cartOrderTotals { border-top: 1px solid #bbb; border-bottom: 1px solid #bbb; }
