--- a/includes/templates/template_default/css/create_account.css
+++ b/includes/templates/template_default/css/create_account.css
@@ -1,5 +1,6 @@
-#opc-ca-left, #opc-ca-right { width: 50%; float: left; }
+#opc-ca-left, #opc-ca-right { width: 50%; float: left; padding: 10px; }
 .buttonRow { text-align: right; }
+.clearBoth { clear: both; }
 
 @media (max-width:767px){
     #opc-ca-left, #opc-ca-right  { width: 100%; }
