--- a/includes/templates/template_default/css/checkout_one.css
+++ b/includes/templates/template_default/css/checkout_one.css
@@ -29,7 +29,7 @@ fieldset > #cartContentsDisplay div { margin-right: 0; }
 .opc-error { border: 2px solid red; }
 .opc-right { text-align: right; }
 .opc-view { position: relative; z-index: 2; box-shadow: 3px 3px 5px 6px #ccc; }
-.opc-cc-submit, #opc-order-confirm, #opc-order-review, #opc-bill-cancel, #opc-bill-save, #opc-ship-cancel, #opc-ship-save, #opc-guest-cancel, #opc-guest-save { cursor: pointer; }
+.opc-cc-submit, #opc-order-confirm, #opc-order-review, #opc-bill-cancel, #opc-bill-save, #opc-ship-cancel, #opc-ship-save, #opc-guest-cancel, #opc-guest-save, #opc-bill-edit, #opc-ship-edit { cursor: pointer; }
 .opc-base, .opc-credit { position: relative; }
 .opc-overlay.active { background: #dcdcdc; height: 100%; width: 100%; opacity: 0.5; top: 0; left: 0; position: absolute; padding: 0; z-index: 1; }
 .buttonRow.opc-buttons { clear: both; }
